# co2esp32tg

./: .gitignore  README.md
doc/: scheme.drawio.xml
odroid/: bme280.py  main.py  mh_z19.py  odroid.service  sensors_pusher.service.template  setup-user-local.sh  sync_remote.sh
server/: .gitignore  Cargo.toml  Rocket.toml  co2esp32tg.service  co2esp32tg.service.template  examples.txt  repeater.sh  update-service.sh
server/src/: chart.rs  handlers.rs  main.rs  storage.rs  tgapi.rs  utils.rs
