[package]
name = "co2esp32tg"
version = "0.1.0"
authors = ["Alexander Gruzintsev <0v3rt1r3d@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotters = "0.2.15"
rocket = "0.4.5"
reqwest = "0.10.6"
rusqlite = "0.23.1"