[package]
name = "co2esp32tg"
version = "0.1.0"
authors = ["Alexander Gruzintsev <0v3rt1r3d@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.12.3"
chrono = "0.4.13"
diesel = { version = "1.4.5", features = ["sqlite"] }
dotenv = "0.15.0"
image = "0.23.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotters = "0.2.15"
reqwest = { version = "0.10.6", features = ["blocking"] }
rocket = { version = "0.4.5", features = ["tls"] }
rusqlite = "0.23.1"
